# glitch

./: .gitignore  Cargo.toml  LICENSE  None  README.md  meta.json
.github/: FUNDING.yml
.github/workflows/: rust.yml
glitch-cli/: Cargo.toml
glitch-cli/src/: main.rs
glitch-core/: Cargo.toml
glitch-core/src/: bounds.rs  classify.rs  eval.rs  lib.rs  parser.rs  token.rs
src/: bounds.rs  eval.rs  main.rs  parser.rs  rgb.rs  token.rs
tests/: line_art_mirrored.txt
