[package]
name = "glitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
gif = "0.13.1"
image = "0.25.0"
rand = "0.9.0-alpha.1"
once_cell = "1.19.0"
open = "5.1.2"
ansiterm = "0.12.2"
