[package]
name = "glitch"
version = "0.4.0"
edition = "2021"
authors = ["Helba <ai@helba.dev>"]
description = "A command-line tool to glitch images."
license = "MIT"
repository = "https://github.com/toyz/glitch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
gif = "0.13.1"
image = { version = "0.25.5", features = ["rayon"] }
rand = "0.8"
open = "5.3"
ansiterm = "0.12"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
console = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
