[package]
name = "glitch-cli"
version = "0.5.1"
edition = "2021"
authors = ["Helba <ai@helba.dev>"]
description = "A command-line tool to glitch images."
license = "MIT"
repository = "https://github.com/toyz/glitch"

[[bin]]
name = "glitch"
path = "src/main.rs"

[dependencies]
glitch-core = { path = "../glitch-core" }
anyhow = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
gif = "0.13.1"
image = { version = "0.25", features = ["rayon"] }
rand = "0.8"
open = "5.3"
ansiterm = "0.12"
rayon = "1.10"
reqwest = { version = "0.12", features = ["blocking"] }
indicatif = "0.17"
console = "0.15"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0.1"
webp-animation = "0.9.0"

