[package]
name = "glitch-core"
version = "0.5.1"
edition = "2021"
authors = ["Helba <ai@helba.dev>"]
description = "Core image glitching engine — expression parser and pixel evaluator."
license = "MIT"
repository = "https://github.com/toyz/glitch"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
